[package]
name = "bpx-orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
crossterm = "0.27.0"
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
rust_decimal = "1.35.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
